--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "card-validator": "^3.0.0",
     "prop-types": "^15.6.0",
     "react-native-flip-card": "^3.4.1",
+    "react-native-keyboard-aware-scroll-view": "^0.4.3",
     "lodash.compact": "^3.0.1",
     "lodash.every": "^4.6.0",
     "lodash.pick": "^4.4.0",
